packages/cli/src/__tests__/fixtures/multi-schema-files/valid/prisma/custom.prisma
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String    @id @default(uuid())
}
