packages/cli/src/__tests__/fixtures/multi-schema-files/invalid/default_schema_invalid-multi_schema_valid/prisma/schema.prisma
generator client {
  provider        = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:dev.db"
}

model User {
  id        String    @id @default(uuid())
  createdAt DateTime  @default()
}
